recreate all the requirements, sources, and unit tests